--- a/GitHubApp/Base.lproj/Main.storyboard
+++ b/GitHubApp/Base.lproj/Main.storyboard
@@ -112,10 +112,10 @@ Select scope
             </objects>
             <point key="canvasLocation" x="797.60000000000002" y="792.95352323838085"/>
         </scene>
-        <!--User List View Controller-->
+        <!--Users-->
         <scene sceneID="Fw0-qo-qDI">
             <objects>
-                <viewController id="pG2-Te-If4" customClass="UserListViewController" customModule="GitHubApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Users" id="pG2-Te-If4" customClass="UserListViewController" customModule="GitHubApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UD9-2A-4i5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -143,10 +143,10 @@ Select scope
             </objects>
             <point key="canvasLocation" x="1606" y="776"/>
         </scene>
-        <!--User Repository List View Controller-->
+        <!--Repository-->
         <scene sceneID="PSs-YA-N2F">
             <objects>
-                <viewController id="7Em-rR-zZU" customClass="UserRepositoryListViewController" customModule="GitHubApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Repository" id="7Em-rR-zZU" customClass="UserRepositoryListViewController" customModule="GitHubApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6S9-p4-HjJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
